--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.19.1",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.7.0",
     "mongoose": "^8.2.4",
     "nodemon": "^3.1.0",
     "socket.io": "^4.7.5"
