--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "mongoose": "^8.2.4",
     "nodemon": "^3.1.0",
     "socket.io": "^4.7.5"
+  },
+"devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0"
   }
 }
